[tool.poetry]
name = "secure-emu"
version = "0.1.0"
description = ""
authors = ["Rick Mark <rickmark@outlook.com>"]
readme = "README.md"
packages = [{include = "secure_emu"}]

[tool.poetry.dependencies]
python = "^3.10"
apple-data = "^1.0.522"
unicorn = "^2.0.0"
capstone = "^4.0.2"
keystone-engine = "^0.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
